Layout changes for intro file.

--- a/webapp/intro.html
+++ b/webapp/intro.html
@@ -10,16 +10,31 @@
   <body>
     <div class="container">
         <h1>Project work intro</h1>
-        <p class="lead">Welcome to the intro page for our Applied Web Application Security project work. This page will help you to get started with the web application.</p>
-        <h3>Task</h3>
-        <p>Your task is to find the vulnerabilities hidden in the web application.</p>
+        <p class="lead">Welcome to the intro page for our Applied Web Application Security project work.<br>This page will help you to get started with the web application.</p>
+        <h3>Programs</h3>
+        <p>For this laboratory you can use your favorite tools.<br>It is not allowed to bruteforce the application!</p>
+        <h3>Tasks</h3>
+        <p>Your task is to find the two vulnerabilities hidden in the webapplication and answer the following questions:</p>
+            <ul type="disc">
+                <li>Search the prices and names of all future products in the shop.<br>These products were not displayed in normal use.</li>
+                <li>Check if you could get other usernames and e-mails.<br>Why is it not possible to get the passwords?</li>
+                <li>Post a review for a product of your choice in the name of someone else.</li>
+            </ul>
         <h3>Hints (use only when needed)</h3>
         <ul>
             <li>
-                <b>Hint 1:</b> Vulnerabilities hidden in the Application <a href="#hint1" data-toggle="collapse">(show/hide)</a>
+                <b>Hint Task1 and 2:</b>  <a href="#hint1" data-toggle="collapse">(show/hide)</a>
                 <div id="hint1" class="collapse">
                     <ul>
-                        <li>A SQL-Injection</li>
+                        <li>Have a closer look at the product overview, especially the search function.</li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <b>Hint Task 3:</b> <a href="#hint1" data-toggle="collapse">(show/hide)</a>
+                <div id="hint1" class="collapse">
+                    <ul>
+                        <li>Have a closer look at the reviwe section.<br>Can you post html code?</li>
                     </ul>
                 </div>
             </li>
